[project]
name = "vibe-sound"
version = "0.1.0"
description = "Real-time mel spectrogram: browser mic streamed over WebSocket to a FastAPI/numpy backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.49",
    "numpy>=2.0",
    "sounddevice>=0.5",
    "scipy>=1.14",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "matplotlib>=3.10.9",
]

# On Linux/ARM64 (Raspberry Pi) pull CPU-only torch; Mac uses the PyPI default (MPS-capable).
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
